<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/landingPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/landing_page"
        android:icon="@drawable/landingpage" />


    <item
        android:id="@+id/converters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/converters"
        android:icon="@drawable/converter"/>


    <item
        android:id="@+id/moneyChanger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:title="@string/money_changer"
        android:icon="@drawable/moneychanger"/>
</menu>